--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -72,27 +72,7 @@
    
   <error-page>
     <error-code>404</error-code>
-    <location>/_errors/404.html</location>
-  </error-page>
-  
-  <error-page>
-    <exception-type>com.epimorphics.lda.exceptions.BadRequestException</exception-type>
-    <location>/_errors/400.html</location>
-  </error-page>
-  
-  <error-page>
-    <exception-type>com.epimorphics.lda.exceptions.VelocityRenderingException</exception-type>
-    <location>/_errors/500.html</location>
-  </error-page>
-  
-  <error-page>
-    <exception-type>com.epimorphics.lda.exceptions.QueryParseException</exception-type>
-    <location>/_errors/500.html</location>
-  </error-page>
-  
-  <error-page>
-    <exception-type>com.epimorphics.lda.exceptions.GeneralException</exception-type>
-    <location>/_errors/something.html</location>
+    <location>/_error_pages/404.html</location>
   </error-page>
 
   <!-- ==================================================================== -->
