--- a/elda-bundled/pom.xml
+++ b/elda-bundled/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3</version>
   </parent>
 
   <artifactId>elda-bundled</artifactId>
