Correction to 404 page name

--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
    
   <error-page>
     <error-code>404</error-code>
-    <location>/_errors/404.html</location>
+	<location>/_errors_pages/velocity/404.html</location>
   </error-page>
 
   <!-- ==================================================================== -->
