Added LogRequestFilter to log begin/end of request, with ID
elda-common and elda-standalone both specify this filter in their
web.xml files.

Everything is logged unless it matches the Java regular expression
given in the filter's init-param com.epimorphics.lda.logging.ignoreIfMatches

The specified parameter is .*/lda-assets/.* which means that if
assets are acquired through Elda (rather than being statically
served eg via an apache) and have their usual name (/lda-assets)
then they will not be logged.

If no init-param is specified then all requests are logged.

--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,19 @@
     </filter-mapping>
     -->
 
+  
+  <!-- suppress from the filtering log anything that mentions lda-assets.
+  -->
+  
+  <filter>
+    <filter-name>LogRequestFilter</filter-name>
+    <filter-class>com.epimorphics.lda.support.LogRequestFilter</filter-class>
+    <init-param>
+        <param-name>com.epimorphics.lda.logging.ignoreIfMatches</param-name>
+        <param-value>.*/lda-assets/.*</param-value>
+    </init-param>
+  </filter>
+  
   <!-- ==================================================================== -->
 
     <context-param>
