Added forgotten filter-mapping for LogRequestFilter.

--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,11 @@
     </init-param>
   </filter>
   
+  <filter-mapping>
+    <filter-name>LogRequestFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <!-- ==================================================================== -->
 
     <context-param>
