--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -107,7 +107,7 @@
     <dependency>
       <groupId>com.epimorphics</groupId>
       <artifactId>lib</artifactId>
-      <version>0.1.2-SNAPSHOT</version>
+      <version>0.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.jmock</groupId>
