--- a/elda-assets/pom.xml
+++ b/elda-assets/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.12</version>
+    <version>1.2.13-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-assets</artifactId>
