--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <properties>
 	  <tempSCM>/tmp/tempSCM</tempSCM>
-	  <project.tagname />
+	  <project.tagname>_cache_revisions</project.tagname>
 
     <ver.junit>4.11</ver.junit>
     <ver.log4j>1.2.17</ver.log4j>
