Loaded proper seq ID into router restlet.

--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -3,6 +3,7 @@ log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.com.hp.hpl.jena.shared=INFO
 
+# log4j.logger.com.epimorphics=DEBUG
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is
@@ -10,7 +11,6 @@ log4j.logger.com.hp.hpl.jena.shared=INFO
 # log4j.rootLogger=INFO, stderr, R
 
 # Example of switching on debug level logging for part of tree
-# log4j.logger.com.hp.hpl.jena.graph.test=debug
 
 # Log format to standard out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
