--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -11,6 +11,7 @@ log4j.logger.com.hp.hpl.jena.shared=INFO
 # log4j.rootLogger=INFO, stderr, R
 
 # Example of switching on debug level logging for part of tree
+# log4j.logger.com.epimorphics=DEBUG
 
 # Log format to standard out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
