--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.16-SNAPSHOT</version>
+    <version>1.3.16</version>
   </parent>
 
   <artifactId>elda-testing-webapp</artifactId>
