--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -3,6 +3,8 @@ log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.com.hp.hpl.jena.shared=INFO
 
+log4j.logger.com.epimorphics.lda=DEBUG
+
 # log4j.logger.com.epimorphics=DEBUG
 
 # Set up logging to include a file record of the output
