--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -3,7 +3,7 @@ log4j.logger.org.apache.http.wire=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.com.hp.hpl.jena.shared=INFO
 
-# log4j.logger.com.epimorphics=DEBUG
+log4j.logger.com.epimorphics=DEBUG
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is
