--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -2,18 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <artifactId>elda</artifactId>
-    <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.23-SNAPSHOT</version>
-  </parent>
+  	<groupId>com.epimorphics.lda</groupId>
+  	<artifactId>json-rdf</artifactId>
+	<name>json-rdf</name>
+	<version>1.3.0</version>
 
-  <!--
-  <groupId>com.epimorphics.lda</groupId>
-  -->
+	<repositories>
+ 
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>epi-public-repo</id>
+      <name>Epimorphics Public Repository</name>
+      <url>http://repository.epimorphics.com</url>
+    </repository>
 
-  <artifactId>json-rdf</artifactId>
-  <name>json-rdf</name>
+	</repositories>
 
   <dependencies>
   
@@ -24,6 +32,12 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+
+	<dependency>
+			<groupId>com.epimorphics.lda</groupId>
+			<artifactId>elda-lda</artifactId>
+			<version>1.3.16</version>
+	</dependency>
 
     <dependency>
     	<groupId>org.apache.jena</groupId>
