--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -40,16 +40,11 @@
 
   <dependencies>
 
-      <dependency>
-          <groupId>com.github.jsonld-java</groupId>
-          <artifactId>jsonld-java</artifactId>
-          <version>0.6.0</version>
-      </dependency>
 
     <dependency>
       <groupId>com.github.jsonld-java</groupId>
       <artifactId>jsonld-java-jena</artifactId>
-      <version>0.3</version>
+      <version>0.4.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.jena</groupId>
@@ -85,7 +80,7 @@
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>jena-arq</artifactId>
-      <version>2.10.1</version>
+      <version>2.11.2</version>
       <type>test-jar</type>
       <scope>test</scope>
   </dependency>
@@ -221,5 +216,38 @@
         <version>3.0.0.RELEASE</version>
       </extension>
     </extensions>
+    <pluginManagement>
+    	<plugins>
+    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+    		<plugin>
+    			<groupId>org.eclipse.m2e</groupId>
+    			<artifactId>lifecycle-mapping</artifactId>
+    			<version>1.0.0</version>
+    			<configuration>
+    				<lifecycleMappingMetadata>
+    					<pluginExecutions>
+    						<pluginExecution>
+    							<pluginExecutionFilter>
+    								<groupId>
+    									org.apache.maven.plugins
+    								</groupId>
+    								<artifactId>
+    									maven-antrun-plugin
+    								</artifactId>
+    								<versionRange>[1.7,)</versionRange>
+    								<goals>
+    									<goal>run</goal>
+    								</goals>
+    							</pluginExecutionFilter>
+    							<action>
+    								<ignore></ignore>
+    							</action>
+    						</pluginExecution>
+    					</pluginExecutions>
+    				</lifecycleMappingMetadata>
+    			</configuration>
+    		</plugin>
+    	</plugins>
+    </pluginManagement>
   </build>
 </project>
