Making standalone be built from common & assets.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ target/
 .project
 .metadata
 .tomcatplugin
+.extract
 .#webclasspath
 elda-standalone/meta-graph.ttl
 elda-standalone/object-graph.ttl
