--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -38,8 +38,16 @@
 	
 	<dependency>
       <groupId>com.epimorphics.lda</groupId>
-      <artifactId>elda-lda</artifactId>
+      <artifactId>elda-common</artifactId>
       <version>${project.version}</version>
+      <type>war</type>
+  </dependency>
+	
+	<dependency>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-assets</artifactId>
+      <version>${project.version}</version>
+      <type>war</type>
     </dependency>
 	
 	<dependency>
