--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,18 @@
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>/lda-assets/*</url-pattern>
+    <url-pattern>/auth/*</url-pattern>
+    <url-pattern>/css/*</url-pattern>
+    <url-pattern>/data/*</url-pattern>
+    <url-pattern>/images/*</url-pattern>
+    <url-pattern>/openlayers/*</url-pattern>
+    <url-pattern>/scripts/*</url-pattern>
+    <url-pattern>/specs/*</url-pattern>
+    <url-pattern>/velocity/*</url-pattern>
+    <url-pattern>/xslt/*</url-pattern>
+    <url-pattern>/index.html/*</url-pattern>
+    <url-pattern>/vocabulary/*</url-pattern>
+    <url-pattern>/index.html/*</url-pattern>
     <url-pattern>/_error_pages/*</url-pattern>
   </servlet-mapping>
    
