--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
     <filter-class>com.epimorphics.lda.support.LogRequestFilter</filter-class>
     <init-param>
         <param-name>com.epimorphics.lda.logging.ignoreIfMatches</param-name>
-        <param-value>.*/lda-assets/.*</param-value>
+        <param-value>(/standalone/(again/)?.*(auth|css|data|images|openlayers|scripts|specs|velocity|xslt|vocabulary|index.html|_error_pages).*)</param-value>
     </init-param>
   </filter>
  
