--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,21 @@
             , velocity::specs/hello-velocity.ttl
             , velocitydev::specs/hello-velocity-dev.ttl
             , ved::specs/mini-education-velocity.ttl
-			, bwq::specs/environment.data.gov.uk-bwq.ttl
+            , bwq::specs/environment.data.gov.uk-bwq.ttl
+           
         </param-value>
   </context-param>
+  
+  <!--
+            , tiny::specs/tiny-education.ttl
+            , mini::specs/mini-education.ttl
+            , full::specs/full-education.ttl
+            , old::specs/old-education.ttl
+            , velocity::specs/hello-velocity.ttl
+            , velocitydev::specs/hello-velocity-dev.ttl
+            , ved::specs/mini-education-velocity.ttl
+            , bwq::specs/environment.data.gov.uk-bwq.ttl
+  -->
   
   <filter>
     <filter-name>LogRequestFilter</filter-name>
