--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target/
 .project
 .metadata
 .tomcatplugin
+.extract
 .#webclasspath
 elda-standalone/meta-graph.ttl
 elda-standalone/object-graph.ttl
