--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.18-RC2</version>
+    <version>1.3.18</version>
   </parent>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda-standalone</name>
-  <version>1.3.18-RC2</version>
+  <version>1.3.18</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
