--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.18</version>
+    <version>1.3.19-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-lda</artifactId>
