--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -7,6 +7,10 @@
 	<name>json-rdf</name>
 	<version>1.3.0</version>
 
+    <properties>
+        <jdk.version>1.7</jdk.version>
+    </properties>
+    
 	<repositories>
  
     <repository>
@@ -65,6 +69,16 @@
          </executions>
       </plugin>
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>${jdk.version}</source>
+            <target>${jdk.version}</target>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+        
         <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
             <version>1.7</version><!--$NO-MVN-MAN-VER$-->
