--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -5,10 +5,11 @@
   	<groupId>com.epimorphics.lda</groupId>
   	<artifactId>json-rdf</artifactId>
 	<name>json-rdf</name>
-	<version>1.3.0</version>
+	<version>1.3.1</version>
 
     <properties>
         <jdk.version>1.7</jdk.version>
+        <ver.junit>4.11</ver.junit>
     </properties>
     
 	<repositories>
@@ -37,18 +38,21 @@
       <scope>compile</scope>
     </dependency>
 
-	<dependency>
-			<groupId>com.epimorphics.lda</groupId>
-			<artifactId>elda-lda</artifactId>
-			<version>1.3.16</version>
-	</dependency>
-
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${ver.junit}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    
     <dependency>
     	<groupId>org.apache.jena</groupId>
     	<artifactId>jena-arq</artifactId>
-    	<version>2.9.0-incubating</version>
+    	<version>2.13.0</version>
+        <scope>test</scope>
     </dependency>
-
+    
 </dependencies>
 <!--
   <version>1.2.18-SNAPSHOT</version>
