--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -17,14 +17,16 @@ log4j.logger.com.hp.hpl.jena.shared=INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern= %d{ISO8601} %5p (%F:%L) - %m%n
+#log4j.appender.stdout.layout.ConversionPattern= %d{ISO8601} %5p (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern= %d{ISO8601} %5p - %m%n
 
 # Log format to standard error
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
-log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %5p (%F:%L) - %m%n
+# log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %5p (%F:%L) - %m%n
+log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %5p - %m%n
 
 # File based log output
 log4j.appender.R=org.apache.log4j.RollingFileAppender
