--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
 	  <tempSCM>/tmp/tempSCM</tempSCM>
 	  <project.tagname></project.tagname>
 
-    <ver.junit>4.11</ver.junit>
+    <ver.junit>4.12</ver.junit>
     <ver.log4j>1.2.17</ver.log4j>
-    <ver.lucene>4.6.1</ver.lucene>
-	<ver.jersey>1.18.2</ver.jersey>
-    <ver.servlet-api>3.0.1</ver.servlet-api>
+    <ver.lucene>6.6.0</ver.lucene>
+	<ver.jersey>1.19.4</ver.jersey>
+    <ver.servlet-api>4.0.0-b07</ver.servlet-api>
     <ver.slf4j>1.7.6</ver.slf4j>
     <ver.velocity>1.7</ver.velocity>
     <ver.wagon>2.2</ver.wagon>
