--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.4.1</version>
+    <version>1.4.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-lda</artifactId>
@@ -56,7 +56,7 @@
         </exclusion>
       </exclusions>
      </dependency>
-     
+
       <dependency>
           <groupId>org.apache.velocity</groupId>
           <artifactId>velocity</artifactId>
