--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.4.1</version>
+    <version>1.4.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-testing-webapp</artifactId>
@@ -27,7 +27,7 @@
       <version>7.0.42</version>
       <scope>provided</scope>
     </dependency>
-	
+
 	<dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
