Added test that the Elda-extras ontology is hosted on epimorphics.com. The test creates subprocesses which first download the presumptive ontology from epimorphics.com and then compare it with the current contents of vocabs/elda_api.ttl. Inequality calls fail() and also system.err.println with a conspicuous message.

--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -215,6 +215,7 @@
             <configuration>
               <includes><include>**/*Tests.java</include></includes>
               <skipTests>${skip-integration-test}</skipTests>
+		<showSuccess>false</showSuccess>
             </configuration>
           </execution>
 
