--- a/elda-standalone/src/main/webapp/log4j.properties
+++ b/elda-standalone/src/main/webapp/log4j.properties
@@ -26,7 +26,7 @@ log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 # Pattern to output the caller's file name and line number.
 # log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %5p (%F:%L) - %m%n
-log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} |%x|B %5p - %m%n
+log4j.appender.stderr.layout.ConversionPattern= %d{ISO8601} %x %5p - %m%n
 
 # File based log output
 log4j.appender.R=org.apache.log4j.RollingFileAppender
