--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     <filter-class>com.epimorphics.lda.support.LogRequestFilter</filter-class>
     <init-param>
         <param-name>com.epimorphics.lda.logging.ignoreIfMatches</param-name>
-        <param-value>(/standalone/(again/)?.*(auth|css|data|images|openlayers|scripts|specs|velocity|xslt|vocabulary|index.html|_error_pages).*)</param-value>
+        <param-value>(standalone)/(auth|css|data|images|openlayers|scripts|specs|velocity|xslt|vocabulary|index.html|_error_pages)</param-value>
     </init-param>
   </filter>
  
@@ -43,7 +43,6 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-<!--
     <filter>
         <filter-name>Jersey Web Application</filter-name>
         <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
@@ -54,8 +53,13 @@
         </init-param>
 
         <init-param>
-          <param-name>com.sun.jersey.config.feature.FilterForwardOn404</param-name>
-          <param-value>true</param-value>
+          <param-name>
+          	com.sun.jersey.config.feature.FilterForwardOn404
+          <!--
+          	jersey.config.servlet.filter.forwardOn404
+          	-->
+          	</param-name>
+            <param-value>true</param-value>
         </init-param>
 
         <init-param>
@@ -63,8 +67,8 @@
              <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
          </init-param>
   </filter>
--->
 
+<!-- 
   <servlet>
     <servlet-name>jersey</servlet-name>
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
@@ -76,23 +80,25 @@
 
     <load-on-startup>1</load-on-startup>
   </servlet>
+-->
 
   <!-- ==================================================================== -->
 
-<!--
   <filter-mapping>
     <filter-name>Jersey Web Application</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
--->
 
+<!-- 
   <servlet-mapping>
     <servlet-name>jersey</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
+-->
 
   <servlet-mapping>
     <servlet-name>default</servlet-name>
+    <url-pattern>/again/*</url-pattern>
     <url-pattern>/auth/*</url-pattern>
     <url-pattern>/css/*</url-pattern>
     <url-pattern>/data/*</url-pattern>
