Added root path to tomcat-maven plugin.

--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -70,6 +70,7 @@
             <phase>package</phase>
 			<configuration>
 				<path>/standalone</path>
+				<path>/</path>
 			</configuration>
           </execution>
         </executions>
