--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -107,16 +107,21 @@
   <servlet-mapping>
     <servlet-name>default</servlet-name>
 <!-- <url-pattern>/*</url-pattern> -->
-    <url-pattern>/openlayers/*</url-pattern>
+    
     <url-pattern>/again/*</url-pattern>
+    <url-pattern>/hello/*</url-pattern>
     <url-pattern>/mini/*</url-pattern>
+    <url-pattern>/tiny/*</url-pattern>
+    <url-pattern>/full/*</url-pattern>
+    
+    <url-pattern>/openlayers/*</url-pattern>
+    <url-pattern>/velocity/*</url-pattern>
     <url-pattern>/auth/*</url-pattern>
     <url-pattern>/css/*</url-pattern>
     <url-pattern>/data/*</url-pattern>
     <url-pattern>/images/*</url-pattern>
     <url-pattern>/scripts/*</url-pattern>
     <url-pattern>/specs/*</url-pattern>
-    <url-pattern>/velocity/*</url-pattern>
     <url-pattern>/xslt/*</url-pattern>
     <url-pattern>/index.html/*</url-pattern>
     <url-pattern>/vocabulary/*</url-pattern>
