--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.4.3</version>
+    <version>1.4.4-SNAPSHOT</version>
   </parent>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
