--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.1.4-ab-SNAPSHOT</version>
+    <version>1.1.4-option.ab2-SNAPSHOT</version>
   </parent>
   <artifactId>elda-common</artifactId>
   <packaging>war</packaging>
