--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
   <context-param>
      <param-name>com.epimorphics.api.initialSpecFile</param-name>
      <param-value>
-            , again::specs/hello-again-world.ttl
+            again::specs/hello-again-world.ttl
         </param-value>
   </context-param>
   
