--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -131,6 +131,12 @@
       <artifactId>jmock-legacy</artifactId>
       <version>2.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>2.0.2-beta</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
