--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda</artifactId>
-  <version>1.5.0-RC</version>
+  <version>1.5.0-RC2</version>
   <packaging>pom</packaging>
   <name>elda</name>
   <description>Top level linked data API project</description>
