--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -13,7 +13,7 @@
   <url>http://maven.apache.org</url>
 
     <properties>
-        <jena.version>3.5.0</jena.version>
+        <jena.version>3.1.0</jena.version>
     </properties>
 
   <repositories>
@@ -70,7 +70,7 @@
     <dependency>
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-tdb</artifactId>
-        <version>3.0.0</version>
+        <version>${jena.version}</version>
     </dependency>
 
     <dependency>
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>com.epimorphics</groupId>
       <artifactId>lib</artifactId>
-      <version>3.0.0</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jmock</groupId>
