UPDATE Tomcat version

--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -17,21 +17,21 @@
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-core</artifactId>
-      <version>7.0.91</version>
+      <version>${tomcat.version}</version>
       <scope>provided</scope>
 	</dependency>
 
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-logging-log4j</artifactId>
-      <version>7.0.42</version>
+      <version>${tomcat.version}</version>
       <scope>provided</scope>
     </dependency>
 
 	<dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
-      <version>7.0.42</version>
+      <version>${tomcat.version}</version>
       <scope>provided</scope>
 	</dependency>
 
