--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8</version>
-		<configuration><skip>false</skip></configuration>
+		<configuration><skip>true</skip></configuration>
         <executions>
           <execution>
             <id>aggregate</id>
