--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -21,13 +21,6 @@
     </dependency>
 
 	<dependency>
-    <groupId>org.apache.tomcat.embed</groupId>
-    <artifactId>tomcat-embed-logging-log4j</artifactId>
-    <version>${tomcat.version}</version>
-    <scope>provided</scope>
-  </dependency>
-
-	<dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
       <version>${tomcat.version}</version>
@@ -59,21 +52,27 @@
     <finalName>elda-standalone</finalName>
 	<plugins>
 
-      <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.0</version>
-        <executions>
-          <execution>
-            <id>tomcat-run</id>
-            <goals> <goal>exec-war</goal> </goals>
-            <phase>package</phase>
-			<configuration>
-				<path>/standalone</path>
-			</configuration>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.tomcat.maven</groupId>-->
+<!--        <artifactId>tomcat11-maven-plugin</artifactId>-->
+<!--        <version>2.0</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>tomcat-run</id>-->
+<!--            <goals> <goal>exec-war</goal> </goals>-->
+<!--            <phase>package</phase>-->
+<!--			<configuration>-->
+<!--				<path>/standalone</path>-->
+<!--			</configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.4.0</version>
+    </plugin>
 
 	  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
