Upgrade Velocity and commons-lang. Add a terse changelog for crafting into better upgrade guidance later

--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -29,8 +29,8 @@
 
     <dependency>
       <groupId>org.apache.velocity</groupId>
-      <artifactId>velocity</artifactId>
-      <version>1.7</version>
+      <artifactId>velocity-engine-core</artifactId>
+      <version>${ver.velocity}</version>
       <scope>compile</scope>
     </dependency>
 
