--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -13,13 +14,12 @@
   <description>webapp for Elda system tests</description>
 
   <dependencies>
-
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-core</artifactId>
       <version>${tomcat.version}</version>
       <scope>provided</scope>
-	</dependency>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
@@ -28,37 +28,37 @@
       <scope>provided</scope>
     </dependency>
 
-	<dependency>
+    <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
       <version>${tomcat.version}</version>
       <scope>provided</scope>
-	</dependency>
+    </dependency>
 
-	    <dependency>
-		       <groupId>com.sun.jersey.contribs</groupId>
-		        <artifactId>jersey-multipart</artifactId>
-		        <version>${ver.jersey}</version>
-		</dependency>
+    <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-multipart</artifactId>
+      <version>${ver.jersey}</version>
+    </dependency>
 
-	    <dependency>
-	        <groupId>commons-beanutils</groupId>
-	        <artifactId>commons-beanutils</artifactId>
-	        <version>1.11.0</version>
-	</dependency>
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.11.0</version>
+    </dependency>
 
-	   <dependency>
-	      <groupId>com.sun.jersey</groupId>
-	      <artifactId>jersey-client</artifactId>
-	      <version>${ver.jersey}</version>
-  </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>${ver.jersey}</version>
+    </dependency>
 
-	    <dependency>
-	     <groupId>com.sun.jersey.contribs</groupId>
-	     <artifactId>jersey-apache-client</artifactId>
-	     <version>${ver.jersey}</version>
-	     <scope>test</scope>
-	   </dependency>
+    <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-apache-client</artifactId>
+      <version>${ver.jersey}</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
@@ -67,11 +67,11 @@
     </dependency>
 
     <dependency>
-        <groupId>com.epimorphics.lda</groupId>
-        <artifactId>elda-lda</artifactId>
-        <version>${project.version}</version>
-        <classifier>sources</classifier>
-        <scope>compile</scope>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-lda</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -81,11 +81,11 @@
     </dependency>
 
     <dependency>
-        <groupId>com.epimorphics.lda</groupId>
-        <artifactId>elda-lda</artifactId>
-        <version>${project.version}</version>
-        <type>test-jar</type>
-        <scope>test</scope>
+      <groupId>com.epimorphics.lda</groupId>
+      <artifactId>elda-lda</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -100,7 +100,6 @@
   <build>
     <finalName>elda-testing-webapp</finalName>
     <plugins>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -130,43 +129,8 @@
         </executions>
       </plugin>
 
-      <!--
-     <plugin>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>maven-jetty-plugin</artifactId>
-      <version>6.1.25</version>
-      <configuration>
-        <scanIntervalSeconds>10</scanIntervalSeconds>
-        <stopKey>foo</stopKey>
-        <stopPort>${com.epimorphics.lda.testserver.stopPort}</stopPort>
-        <connectors>
-          <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-            <port>${com.epimorphics.lda.testserver.port}</port>
-            <maxIdleTime>60000</maxIdleTime>
-          </connector>
-        </connectors>
-        <webApp>${basedir}/../target/elda-standalone.war</webApp>
-        <contextPath>/elda</contextPath>
-      </configuration>
-      <executions>
-        <execution>
-          <id>start-jetty</id>
-          <phase>pre-integration-test</phase>
-          <goals> <goal>deploy-war</goal> </goals>
-          <configuration> <daemon>true</daemon> </configuration>
-        </execution>
-        <execution>
-          <id>stop-jetty</id>
-          <phase>post-integration-test</phase>
-          <goals> <goal>stop</goal> </goals>
-        </execution>
-      </executions>
-    </plugin>
-  -->
-
       <!-- plugin to read properties -->
       <!-- used to configure port numbers -->
-
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>properties-maven-plugin</artifactId>
@@ -188,13 +152,11 @@
       </plugin>
 
       <!-- plugin to run the tests -->
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.9</version>
         <executions>
-
           <execution>
             <id>test</id>
             <phase>integration-test</phase>
@@ -213,23 +175,24 @@
               <goal>test</goal>
             </goals>
             <configuration>
-              <includes><include>**/*Tests.java</include></includes>
+              <includes>
+                <include>**/*Tests.java</include>
+              </includes>
               <skipTests>${skip-integration-test}</skipTests>
-		<showSuccess>false</showSuccess>
+              <showSuccess>false</showSuccess>
             </configuration>
           </execution>
-
         </executions>
       </plugin>
 
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
-          <configuration>
-              <skip>true</skip>
-          </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
 
 
@@ -259,7 +222,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
