--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
@@ -10,35 +11,34 @@
   <description>Top level linked data API project</description>
 
   <scm>
-      <developerConnection>scm:git:git@github.com:epimorphics/elda.git</developerConnection>
-      <url>https://github.com/epimorphics/elda</url>
-      <tag>HEAD</tag>
+    <developerConnection>scm:git:git@github.com:epimorphics/elda.git</developerConnection>
+    <url>https://github.com/epimorphics/elda</url>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
-	  <tempSCM>/tmp/tempSCM</tempSCM>
-	  <project.tagname />
+    <tempSCM>/tmp/tempSCM</tempSCM>
+    <project.tagname/>
 
     <ver.junit>4.13.2</ver.junit>
     <ver.log4j>2.17.1</ver.log4j>
     <ver.lucene>7.1.0</ver.lucene>
-  	<ver.jersey>1.19.4</ver.jersey>
+    <ver.jersey>1.19.4</ver.jersey>
     <ver.servlet-api>3.0.1</ver.servlet-api>
     <ver.slf4j>2.0.17</ver.slf4j>
     <ver.velocity>1.7</ver.velocity>
     <ver.wagon>2.2</ver.wagon>
     <ver.xmlunit>1.4</ver.xmlunit>
     <jdk.version>1.8</jdk.version>
+    <tomcat.version>7.0.107</tomcat.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
-    <tomcat.version>7.0.107</tomcat.version>
   </properties>
 
   <build>
     <pluginManagement>
       <plugins>
-
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
@@ -81,12 +81,14 @@
       </extension>
     </extensions>
 
-	<plugins>
+    <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8</version>
-		<configuration><skip>true</skip></configuration>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
         <executions>
           <execution>
             <id>aggregate</id>
@@ -97,13 +99,12 @@
             </configuration>
           </execution>
         </executions>
-</plugin>
+      </plugin>
     </plugins>
   </build>
 
 
   <dependencies>
-
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
@@ -128,7 +129,7 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>${ver.servlet-api}</version>
       <type>jar</type>
-	  <scope>provided</scope>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -175,7 +176,6 @@
   </distributionManagement>
 
   <repositories>
-
     <repository>
       <id>epi-public-repo</id>
       <name>Epimorphics Public Repository</name>
