Add log4j impl for SLF4J2 Add log4j 1 to 2 bridge to testing-webapp

--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -198,6 +198,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j2-impl</artifactId>
+      <version>${ver.log4j}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
       <version>${ver.slf4j}</version>
