Fix velocity deprecations warnings

--- a/elda-assets/src/main/webapp/velocity/velocity.properties
+++ b/elda-assets/src/main/webapp/velocity/velocity.properties
@@ -12,4 +12,4 @@
 
 # No logging
 runtime.log.logsystem.class=org.apache.velocity.runtime.log.NullLogChute
-velocimacro.max.depth=50
+velocimacro.max_depth=50
