--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
